--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <a href="">
                 <h1 class="PORTFOLIO1">Click here to see my work</h1>
             </a>
-            <a href="file:///D:/portfolio/main.html">
+            <a href="https://sha22-2001.github.io/shayanportfolio.github.io/">
             <h3 class="ABOUTME">Home</h3></a>
-            <a href="file:///D:/portfolio/About/main.html">
+            <a href="https://sha22-2001.github.io/shayanportfolio-about-.github.io/">
             <h3 class="know">About Me</h3></a>
         </nav>
         <section>
