--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
 
             <img class="PORTFOLIO" src="./img/portfolio.png" alt="Portfolio">
-            <a href="">
+            <a href="https://sha22-2001.github.io/shayanportfolio-work.github.io/">
                 <h1 class="PORTFOLIO1">Click here to see my work</h1>
             </a>
             <a href="https://sha22-2001.github.io/shayanportfolio.github.io/">
