--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
             <img class="PORTFOLIO" src="./img/portfolio.png" alt="Portfolio">
             <a href="https://sha22-2001.github.io/potfolioposter.github.io/">
-                <h1 class="PORTFOLIO1">Click here to see my work</h1>
-            </a>
+                <h1 class="PORTFOLIO1">Click here to see my work</h1>   </a>
             <a href="https://sha22-2001.github.io/shayanportfolio.github.io/">
             <h3 class="ABOUTME">Home</h3></a>
             <a href="https://sha22-2001.github.io/shayanportfolio-about-.github.io/">
